Fix Categorie alignment with flex in Home page

--- a/src/app/main/home/hexagone/hexagone.component.scss
+++ b/src/app/main/home/hexagone/hexagone.component.scss
@@ -341,5 +341,4 @@
 
 .mrg{
   top: -47px;
-  left: -73px;
 }
